# fribidi

./: CMakeLists.txt
lib/: arabic-shaping.tab.i  joining-type.tab.i
