set(src_fribidi
"${fribidi_SOURCE_DIR}/lib/fribidi-arabic.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-begindecls.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-bidi.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-bidi-types.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-bidi-types-list.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-char-sets.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-char-sets-list.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-common.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-deprecated.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-enddecls.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-flags.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-joining.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-joining-types.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-joining-types-list.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-mirroring.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-brackets.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-shape.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-types.h"
"${fribidi_SOURCE_DIR}/lib/fribidi-unicode.h"
"${fribidi_SOURCE_DIR}/lib/fribidi.h"
"${fribidi_SOURCE_DIR}/lib/fribidi.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-arabic.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-bidi.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-bidi-types.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-char-sets.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-char-sets-cap-rtl.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-char-sets-cp1255.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-char-sets-cp1256.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-char-sets-iso8859-6.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-char-sets-iso8859-8.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-char-sets-utf8.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-deprecated.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-joining.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-joining-types.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-mirroring.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-brackets.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-run.c"
"${fribidi_SOURCE_DIR}/lib/fribidi-shape.c")

add_library(fribidi STATIC ${src_fribidi})

target_include_directories(fribidi PUBLIC "${fribidi_SOURCE_DIR}/lib")
target_compile_definitions(fribidi PUBLIC -DDONT_HAVE_FRIBIDI_CONFIG_H -DHAVE_STRINGIZE -DFRIBIDI_LIB_STATIC)