set(src_fribidi
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-arabic.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-begindecls.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-bidi.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-bidi-types.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-bidi-types-list.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-char-sets.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-char-sets-list.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-common.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-deprecated.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-enddecls.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-flags.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-joining.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-joining-types.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-joining-types-list.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-mirroring.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-brackets.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-shape.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-types.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-unicode.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi.h"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-arabic.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-bidi.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-bidi-types.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-char-sets.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-char-sets-cap-rtl.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-char-sets-cp1255.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-char-sets-cp1256.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-char-sets-iso8859-6.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-char-sets-iso8859-8.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-char-sets-utf8.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-deprecated.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-joining.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-joining-types.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-mirroring.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-brackets.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-run.c"
"${CMAKE_CURRENT_SOURCE_DIR}/lib/fribidi-shape.c")

add_library(fribidi STATIC ${src_fribidi})

target_include_directories(fribidi PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/lib")
target_compile_definitions(fribidi PUBLIC -DDONT_HAVE_FRIBIDI_CONFIG_H -DHAVE_STRINGIZE -DFRIBIDI_LIB_STATIC -DHAVE_STDLIB_H)